@@ -6859,120 +6859,3 @@ create_Stock_Split_Druid (void)
   return Stock_Split_Druid;
 }
 
-GtkWidget*
-create_Username_Password_Dialog (void)
-{
-  GtkWidget *Username_Password_Dialog;
-  GtkWidget *dialog_vbox16;
-  GtkWidget *heading_label;
-  GtkWidget *frame47;
-  GtkWidget *hbox95;
-  GtkWidget *vbox105;
-  GtkWidget *label847713;
-  GtkWidget *label847714;
-  GtkWidget *vbox106;
-  GtkWidget *username_entry;
-  GtkWidget *password_entry;
-  GtkWidget *dialog_action_area16;
-  GtkWidget *button79;
-  GtkWidget *button81;
-
-  Username_Password_Dialog = gnome_dialog_new (_("Username and Password"), NULL);
-  gtk_object_set_data (GTK_OBJECT (Username_Password_Dialog), "Username_Password_Dialog", Username_Password_Dialog);
-  gtk_window_set_policy (GTK_WINDOW (Username_Password_Dialog), FALSE, FALSE, FALSE);
-  gnome_dialog_close_hides (GNOME_DIALOG (Username_Password_Dialog), TRUE);
-
-  dialog_vbox16 = GNOME_DIALOG (Username_Password_Dialog)->vbox;
-  gtk_object_set_data (GTK_OBJECT (Username_Password_Dialog), "dialog_vbox16", dialog_vbox16);
-  gtk_widget_show (dialog_vbox16);
-
-  heading_label = gtk_label_new (_("Enter your username and password"));
-  gtk_widget_ref (heading_label);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "heading_label", heading_label,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (heading_label);
-  gtk_box_pack_start (GTK_BOX (dialog_vbox16), heading_label, FALSE, FALSE, 0);
-
-  frame47 = gtk_frame_new (NULL);
-  gtk_widget_ref (frame47);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "frame47", frame47,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (frame47);
-  gtk_box_pack_start (GTK_BOX (dialog_vbox16), frame47, TRUE, TRUE, 0);
-
-  hbox95 = gtk_hbox_new (FALSE, 2);
-  gtk_widget_ref (hbox95);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "hbox95", hbox95,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (hbox95);
-  gtk_container_add (GTK_CONTAINER (frame47), hbox95);
-  gtk_container_set_border_width (GTK_CONTAINER (hbox95), 10);
-
-  vbox105 = gtk_vbox_new (TRUE, 5);
-  gtk_widget_ref (vbox105);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "vbox105", vbox105,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (vbox105);
-  gtk_box_pack_start (GTK_BOX (hbox95), vbox105, TRUE, TRUE, 0);
-
-  label847713 = gtk_label_new (_("Username:"));
-  gtk_widget_ref (label847713);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "label847713", label847713,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (label847713);
-  gtk_box_pack_start (GTK_BOX (vbox105), label847713, FALSE, FALSE, 0);
-
-  label847714 = gtk_label_new (_("Password:"));
-  gtk_widget_ref (label847714);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "label847714", label847714,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (label847714);
-  gtk_box_pack_start (GTK_BOX (vbox105), label847714, FALSE, FALSE, 0);
-
-  vbox106 = gtk_vbox_new (TRUE, 5);
-  gtk_widget_ref (vbox106);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "vbox106", vbox106,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (vbox106);
-  gtk_box_pack_start (GTK_BOX (hbox95), vbox106, TRUE, TRUE, 0);
-
-  username_entry = gtk_entry_new ();
-  gtk_widget_ref (username_entry);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "username_entry", username_entry,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (username_entry);
-  gtk_box_pack_start (GTK_BOX (vbox106), username_entry, FALSE, FALSE, 0);
-
-  password_entry = gtk_entry_new ();
-  gtk_widget_ref (password_entry);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "password_entry", password_entry,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (password_entry);
-  gtk_box_pack_start (GTK_BOX (vbox106), password_entry, FALSE, FALSE, 0);
-  gtk_entry_set_visibility (GTK_ENTRY (password_entry), FALSE);
-
-  dialog_action_area16 = GNOME_DIALOG (Username_Password_Dialog)->action_area;
-  gtk_object_set_data (GTK_OBJECT (Username_Password_Dialog), "dialog_action_area16", dialog_action_area16);
-  gtk_widget_show (dialog_action_area16);
-  gtk_button_box_set_layout (GTK_BUTTON_BOX (dialog_action_area16), GTK_BUTTONBOX_END);
-  gtk_button_box_set_spacing (GTK_BUTTON_BOX (dialog_action_area16), 8);
-
-  gnome_dialog_append_button (GNOME_DIALOG (Username_Password_Dialog), GNOME_STOCK_BUTTON_OK);
-  button79 = g_list_last (GNOME_DIALOG (Username_Password_Dialog)->buttons)->data;
-  gtk_widget_ref (button79);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "button79", button79,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (button79);
-  GTK_WIDGET_SET_FLAGS (button79, GTK_CAN_DEFAULT);
-
-  gnome_dialog_append_button (GNOME_DIALOG (Username_Password_Dialog), GNOME_STOCK_BUTTON_CANCEL);
-  button81 = g_list_last (GNOME_DIALOG (Username_Password_Dialog)->buttons)->data;
-  gtk_widget_ref (button81);
-  gtk_object_set_data_full (GTK_OBJECT (Username_Password_Dialog), "button81", button81,
-                            (GtkDestroyNotify) gtk_widget_unref);
-  gtk_widget_show (button81);
-  GTK_WIDGET_SET_FLAGS (button81, GTK_CAN_DEFAULT);
-
-  return Username_Password_Dialog;
-}
-
