@@ -22,4 +22,3 @@ GtkWidget* create_Tax_Information_Dialog (void);
 GtkWidget* create_Duplicate_Transaction_Dialog (void);
 GtkWidget* create_HTML_Style_Sheet_Dialog (void);
 GtkWidget* create_Stock_Split_Druid (void);
-GtkWidget* create_Username_Password_Dialog (void);
