@@ -2,13 +2,13 @@ gladedir = $(GNC_GLADE_DIR)
 glade_DATA = \
 	commodity.glade \
 	price.glade \
-	report.glade
+	report.glade \
+	userpass.glade
 
 STRING_FILES = \
 	commodity_strings.c \
 	price_strings.c \
-	report_strings.c
+	report_strings.c \
+	userpass_strings.c
 
 EXTRA_DIST = $(glade_DATA) $(STRING_FILES)
-
-
