@@ -1,0 +1,10 @@
+/*
+ * Translatable strings file generated by Glade.
+ * Add this file to your project's POTFILES.in.
+ * DO NOT compile it as part of your application.
+ */
+
+gchar *s = N_("Username and Password");
+gchar *s = N_("Enter your username and password");
+gchar *s = N_("Username:");
+gchar *s = N_("Password:");
